# Praktyki-2022-05

./: .clang-format  .gitignore  README.md  piotr.zieniewicz.md
doc/: Piotr.Mijakowski.md  scenarios.md
src/ESP32_driver_app/: CMakeLists.txt  sdkconfig
src/ESP32_driver_app/main/: CMakeLists.txt  direction.c  direction.h  lights.c  lights.h  main.c  wheel.c  wheel.h  window.c  window.h  wipers.c  wipers.h
src/ESP32_lights_controll_app/: CMakeLists.txt
src/ESP32_lights_controll_app/main/: main.c
src/direction_indicators_control_app/: CMakeLists.txt  a.out  action_listener.cpp  action_listener.h  callback.cpp  callback.h  main.cpp  settings.h
src/driver_app/: CMakeLists.txt  main.cpp  prompt.cpp  prompt.h  test.autox
src/driver_app/Scenarios/: Window-cycle.autox  cycle-everything.autox  cycle-indicator.autox  cycle-wiper.autox  help.autox  test.autox  tets.autox
src/driver_gui/: CMakeLists.txt  driver.glade  driver.glade~  main.cpp
src/example/: CMakeLists.txt  data_publish_example.cpp
src/log_app/: CMakeLists.txt  main.cpp  topics
src/wheel_control_app/: CMakeLists.txt  main.cpp
src/windows_control_app/: CMakeLists.txt  main.cpp
src/wiper_control_app/: CMakeLists.txt  main.cpp
